ghc-4335c07/testsuite/tests/parser/should_fail/T10196Fail1.hs
module T10196Fail1 where

-- Constructors are not allowed to start with a modifier letter.
data Foo = ᵦfoo
