ghc-4335c07/testsuite/tests/parser/should_fail/T10196Fail1.stderr

T10196Fail1.hs:4:12: error: lexical error at character '\7526'
